# game-of-life

./: .drone.yml  Cargo.toml  Readme.md
src/: game.rs  graphics.rs  interface.rs  lib.rs  time.rs
src/game/: loop.rs  world.rs
src/graphics/: drawcolors.rs
src/interface/: button.rs  checkbox.rs  label.rs  spinbox.rs
