[package]
name = "game-of-life"
version = "0.3.0"
authors = ["Claudio Mattera <dev@claudiomattera.it>"]
edition = "2018"
description = "The classical Conway's game of life cellular automation"
readme = "Readme.md"
homepage = "https://gitlab.com/claudiomattera/game-of-life"
repository = "https://gitlab.com/claudiomattera/game-of-life"
license = "MPL-2.0"
keywords = [
    "games",
]
categories = [
    "games",
]
publish = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.release]
opt-level = "z"
lto = true
